<resources>
    <string name="app_name">JumpUpAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_main_title">JumpUp.Me - Carpooling</string>
    <string name="fragment_main_introduction_text">Enter your trips\nFind trips of other users,
        combine and book them</string>
    <string name="fragment_main_email">eMail</string>
    <string name="fragment_main_password">Password</string>
    <string name="fragment_main_login">Login</string>
    <string name="fragment_main_login_success">Login successful</string>
    <string name="fragment_main_register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_map_test">Map test</string>
    <string name="jumpup_request_error_io">A technical error occured during the communication with our servers.</string>
    <string name="jumpup_request_error_json">A technical error occured during the communication with our servers.</string>
    <string name="jumpup_request_error_malformed_url">A technical error occured during the communication with our servers.</string>
    <string name="jumpup_request_error_invalid_credentials">The credentials you provided were wrong. Please try again!</string>
    <string name="title_activity_registration">@string/fragment_main_title</string>
    <string name="activity_registration_username_default">Username</string>
    <string name="activity_registration_email_default">E-Mail</string>
    <string name="activity_registration_password_default">Password</string>
    <string name="activity_registration_confirm_password_default">Confirm Password</string>
    <string name="activity_registration_prename_default">Prename</string>
    <string name="activity_registration_lastname_default">Lastname</string>
    <string name="activity_registration_registration_success">The registration was successful! Please check your eMail inbox, a confirmation might be necessary.</string>
    <string name="jumpup_request_error_registration">The registration failed. Please try again.</string>
    <string name="activity_welcome_title">JumpUp.Me</string>
    <string name="portal_activities_title">JumpUp.Me - Member area</string>
    <string name="portal_activity_welcome_text">Hello %s!\nThis is the member area.\nUse the menu to navigate to the things you can do.
        \n\n- Update your profile
        \n- Offer a trip
        \n- Look for trips
        \n- List your trips
        \n- List your bookings</string>
    <string name="portal_menu_profile">Profile</string>
    <string name="portal_menu_offer_trip">Offer trip</string>
    <string name="portal_menu_show_my_trips">Show my trips</string>
    <string name="portal_menu_look_for_trips">Look for trips</string>
    <string name="portal_menu_show_my_bookings">Show my bookings</string>
    <string name="portal_menu_logout">Logout</string>
    <string name="portal_activities_logout_success">You were successfully logged out.</string>
    <string name="activity_profile_title">Profile</string>
    <string name="activity_profile_save">Save</string>
    <string name="activity_profile_gender">Gender</string>
    <string name="activity_profile_male">Male</string>
    <string name="activity_profile_female">Female</string>
    <string name="activity_profile_dob">Date of Birth</string>
    <string name="activity_profile_pob">Place of Birth</string>
    <string name="activity_profile_language">Language</string>
    <string name="activity_profile_town">Town</string>
    <string name="activity_profile_country">Country</string>
    <string name="activity_profile_mobile">Mobile</string>
    <string name="activity_profile_skype">Skype</string>
    <string name="jumpup_request_error_update_profile_failed">The profile update failed.</string>
    <string name="activity_profile_success">Your profile was updated successfully.</string>
    <string name="jumpup_request_error_trip_list_load_failed">We couldn\'t load your offered trips. Please try again later or contact the JumpUp customer care.</string>
    <string name="activity_offered_trips_title">My trips</string>
    <string name="activity_offered_trips_no_offered_trips">You didn\'t offer any trip yet.</string>
    <string name="activity_view_trip_title">My trip</string>
    <string name="activity_view_trip_start_location">Start location</string>
    <string name="activity_view_trip_end_location">End location</string>
    <string name="activity_view_trip_departure_date">Departe date</string>
    <string name="activity_view_trip_arrival_date">Arrival date</string>
    <string name="activity_view_trip_price">Price</string>
    <string name="activity_view_trip_number_seats">Number of seats</string>
    <string name="activity_view_trip_edit">Edit</string>
    <string name="activity_view_trip_edit_success">Your trip was successfully updated.</string>
    <string name="activity_view_trip_on_map_title">My trip</string>
    <string name="activity_view_trip_show_on_map">Show on map</string>
    <string name="activity_view_trip_on_map_start_location_label">Your start location</string>
    <string name="activity_view_trip_on_map_end_location_label">Your destination</string>
    <string name="activity_view_trip_on_map_start_location_info_window" formatted="false">Departure date: %s
        \nNumber of seats: %s
        \nDuration: %s
        \nDistance: %s
        \nEstimated arrival: %s</string>
    <string name="activity_offered_trips_button_label_view_on_map">View on map</string>
    <string name="activity_offered_trips_on_map_trips">My trips</string>
    <string name="preferences_distance_unit_title">Distance unit</string>
    <string name="preferences_distance_unit_key">distance_unit</string>
    <string name="preferences_distance_value_metric">preferences_distance_value_metric</string>
    <string name="preferences_distance_value_imperial">preferences_distance_value_imperial</string>
    <string name="preferences_distance_label_metric">Metric</string>
    <string name="preferences_distance_label_imperial">Imperial</string>
    <string name="preferences_category_units_title">Units</string>
    <string name="preferences_category_units_key">\@string/preferences_category_units_key</string>
    <string name="preferences_duration_unit_title">Duration</string>
    <string name="preferences_duration_unit_key">preferences_duration_unit_key</string>
    <string name="preferences_duration_value_hours">preferences_duration_value_hours</string>
    <string name="preferences_duration_value_minutes">preferences_duration_value_minutes</string>
    <string name="preferences_duration_label_hours">Hours</string>
    <string name="preferences_duration_label_minutes">Minutes</string>
    <string name="preferences_category_synchronization_title">Synchronization</string>
    <string name="preferences_category_synchronization_key">preferences_category_synchronization_key</string>
    <string name="preferences_enable_trip_synchronization_title">Enable trip synchronization</string>
    <string name="preferences_enable_trip_synchronization_key">preferences_enable_trip_synchronization_key</string>
    <string name="preferences_number_trips_title">Number of trips</string>
    <string name="preferences_number_trips_key">preferences_number_trips_key</string>
    <string name="preferences_number_trips_default">100</string>
    <string name="preference_headers_1_title">Preferences</string>
    <string name="preference_headers_1_summary">General preferences of the JumpUp app</string>
    <string name="portal_menu_preferences">Settings</string>
    <string name="activity_settings_title">Settings</string>
    <string name="preferences_duration_value_hours_label">hours</string>
    <string name="preferences_duration_value_minutes_label">minutes</string>
    <string name="preferences_distance_value_metric_label">kilometers</string>
    <string name="preferences_distance_value_imperial_label">miles</string>
    <string name="activity_offered_trips_button_label_refresh">Refresh</string>
    <string name="title_activity_search_trips">SearchTrips</string>
    <string name="activity_search_trips_date_from">Date from</string>
    <string name="activity_search_trips_date_to">Date to</string>
    <string name="activity_search_trips_price_from">Price from</string>
    <string name="activity_search_trips_price_to">Price to</string>
    <string name="activity_search_trips_button_label">Search trips</string>
    <string name="activity_search_trips_start_location">Start location</string>
    <string name="activity_search_trips_end_location">Destination location</string>
    <string name="activity_search_trips_geocoding_error">We couldn\'t determine the location you entered. Please fix it and try again.</string>
    <string name="activity_search_trips_title">Search trips</string>
    <string name="jumpup_request_error_trip_search_failed">The search for trips failed. Please try again or contact the customer care team.</string>
    <string name="activity_search_trips_no_result">We didn\'t find any trip matching your criteria. Please try to be less restrictive.</string>
    <string name="activity_search_trips_overlapping_partial_trips_found">We didn\'t find any direct trips, but found trips of different drivers that cross each other. You can book parts of the trips and combine them to get to your destination.</string>
    <string name="activity_search_trips_direct_trips_found">We found direct trips that you can book.</string>
    <string name="activity_search_trips_max_distance">Max distance</string>
    <string name="title_activity_found_direct_trips">FoundDirectTripsActivity</string>
    <string name="activity_found_direct_trips_title">Found direct trips</string>
    <string name="google_geocoding_request_error">Error while executing Geocoding request to Google.</string>
</resources>
