<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jumpup.imi.fb4.htw.de.jumpupandroid.portal.profile.ProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/fragment_main_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:checked="false"
                android:text="@string/activity_profile_male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:checked="false"
                android:text="@string/activity_profile_female" />
        </RadioGroup>

        <EditText
            android:id="@+id/editText"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:enabled="false"
            android:text="@string/activity_profile_gender" />

        <EditText
            android:id="@+id/edDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:text="@string/activity_profile_dob" />

        <EditText
            android:id="@+id/edPlaceOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_profile_pob" />

        <EditText
            android:id="@+id/edLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/activity_profile_language" />

        <EditText
            android:id="@+id/edTown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_profile_town" />

        <EditText
            android:id="@+id/edCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_profile_country" />

        <EditText
            android:id="@+id/edPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_profile_mobile" />

        <EditText
            android:id="@+id/edSkype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_profile_skype" />

        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/activity_profile_save" />

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />
    </LinearLayout>
</RelativeLayout>